--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
     <?xml version="1.0" encoding="UTF-8"?>
     <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-            id="com.five-doors.cordova.smartopen" version=1.0">
+            id="com.five-doors.cordova.smartopen" version="1.0">
         <name>Smart Open</name>
         <description>Opens an external app or launches the app store. iOS and Android</description>
         <license>Apache 2.0</license>
