--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,9 @@
             	<feature name="SmartOpen">
                 	<param name="android-package" value="com.five_doors.cordova.smartopen.SmartOpen"/>
             	</feature>
+            	
+            	<source-file src="src/android/SmartOpen.java" target-dir="com/five_doors/cordova/smartopen"/>
+            	
         	</config-file>
     	</platform>
 
