--- a/plugin.xml
+++ b/plugin.xml
@@ -20,12 +20,12 @@
         <platform name="android">
         	<config-file target="config.xml" parent="/*">
             	<feature name="SmartOpen">
-                	<param name="android-package" value="com.five_doors.cordova.smartopen"/>
+                	<param name="android-package" value="com.five_doors.cordova.smartopen.SmartOpen"/>
             	</feature>
-            	
-            	<source-file src="src/android/SmartOpen.java" target-dir="com/five_doors/cordova/smartopen"/>
-            	
         	</config-file>
+        	
+        	<source-file src="src/android/SmartOpen.java" target-dir="com/five_doors/cordova/smartopen"/>
+        	
     	</platform>
 
     </plugin>
