--- a/plugin.xml
+++ b/plugin.xml
@@ -18,13 +18,13 @@
             <source-file src="src/ios/FDSmartOpen.m" />
         </platform>
         <platform name="android">
-        	<config-file target="config.xml" parent="/*">
+        	<config-file target="res/xml/config.xml" parent="/*">
             	<feature name="SmartOpen">
                 	<param name="android-package" value="com.five_doors.cordova.smartopen.SmartOpen"/>
             	</feature>
         	</config-file>
         	
-        	<source-file src="src/android/SmartOpen.java" target-dir="com/five_doors/cordova/smartopen"/>
+        	<source-file src="src/android/SmartOpen.java" target-dir="src/com/five_doors/cordova/smartopen"/>
         	
     	</platform>
 
